; ModuleID = '/home/carl/AnghaBench/timescaledb/tsl/src/compression/extr_deltadelta.c_delta_delta_decompression_iterator_from_datum_reverse.c'
source_filename = "/home/carl/AnghaBench/timescaledb/tsl/src/compression/extr_deltadelta.c_delta_delta_decompression_iterator_from_datum_reverse.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @delta_delta_decompression_iterator_from_datum_reverse(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_4__*, align 8
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %6 = call %struct.TYPE_4__* @palloc(i32 4)
  store %struct.TYPE_4__* %6, %struct.TYPE_4__** %5, align 8
  %7 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %8 = load i32, i32* %3, align 4
  %9 = call i64 @PG_DETOAST_DATUM(i32 %8)
  %10 = inttoptr i64 %9 to i8*
  %11 = load i32, i32* %4, align 4
  %12 = call i32 @int64_decompression_iterator_init_reverse(%struct.TYPE_4__* %7, i8* %10, i32 %11)
  %13 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 0
  ret i32* %14
}

declare dso_local %struct.TYPE_4__* @palloc(i32) #1

declare dso_local i32 @int64_decompression_iterator_init_reverse(%struct.TYPE_4__*, i8*, i32) #1

declare dso_local i64 @PG_DETOAST_DATUM(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
